separated CSS files, even more BEMish

--- a/css/taskList.css
+++ b/css/taskList.css
@@ -1,162 +1,6 @@
-html {
-    box-sizing: border-box;
-}
-
-*, ::after, ::before {
-    box-sizing: inherit;
-}
-
-:root {
-    --border-color: #d5d5d5;
-    --box-shadow-color: #c0c0c0;
-}
-
-.taskList {
-    font-family: 'Montserrat', sans-serif;
-    margin: 20px auto;
-    padding: 20px;
-    line-height: 140%;
-    background-color: #dadada;
-    color: #333;
-    display: grid;
-    max-width: 864px;
-    grid-gap: 10px;
-}
-
-.taskList__section {
-    background-color: #eee;
-    border: 1px solid var(--border-color);
-    box-shadow: 0px 0px 2px var(--box-shadow-color);
-}
-
-.taskList__addTaskForm {
-    display: flex;
-    padding: 10px;
-    flex-wrap: wrap;
-}
-
-.taskList__sectionHeader {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    border-bottom: 1px solid var(--border-color);
-}
-
-.taskList__sectionHeaderText {
-    padding: 20px;
-    margin: 0px;
-    font-size: 19px;
-    flex-grow: 1;
-}
-
-.taskList__addTaskButton {
-    background-color: teal;
-    color: #ddd;
-    border: 0px;
-    margin: 5px 10px;
-    padding: 10px 5px;
-    flex-grow: 1;
-    transition: 0.3s;
-}
-
-.taskList__addTaskButton:hover {
-    background-color: hsl(180, 100%, 35%);
-    transform: scale(1.05);
-}
-
-.taskList__addTaskButton:active {
-    background-color: hsl(180, 100%, 45%);
-    transform: scale(0.9);
-}
-
-.taskList__newTaskName {
-    flex-grow: 200;
-    margin: 5px 10px;
-    padding: 10px;
-    background: transparent;
-    border: 1px solid var(--border-color);
-}
-
-.taskList__textButtonsWrapper {
-    padding: 10px;
-    line-height: 2;
-    text-align: right;
-    flex-grow: 1;
-}
-
-.taskList__textButton {
-    border: none;
-    background: none;
-    color: teal;
-    transition: 0.2s;
-}
-
-.taskList__textButton:disabled {
-    color: #999;
-}
-
-.taskList__textButton:hover:enabled {
-    color: hsl(180, 100%, 30%);
-}
-
-.taskList__textButton:active:enabled {
-    color: hsl(180, 100%, 35%);
-}
-
-.taskList__textButton--hidden {
-    display: none;
-}
-
-.taskList__taskList {
-    padding: 20px;
-}
-
-.taskList__task {
-    display: grid;
-    grid-template-columns: auto 1fr auto;
-    align-items: center;
-    padding: 5px;
-    border-bottom: 1px solid var(--border-color);
-}
-
-.taskList__taskList--hideDone .taskList__task--done {
-    display: none;
-}
-
-.taskList__task--done .taskList__taskName {
-    text-decoration: line-through;
-}
-
-.taskList__taskName {
-    font-weight: normal;
-}
-
-.taskList__smallButton {
-    background-color: green;
-    color: white;
-    border: none;
-    width: 30px;
-    height: 30px;
-    margin: 8px;
-    transition: 0.2s;
-}
-
-.taskList__smallButton:hover {
-    background-color: hsl(120, 100%, 30%);
-}
-
-.taskList__smallButton:active {
-    background-color: hsl(120, 100%, 35%);
-}
-
-.taskList__smallButton--red {
-    background-color: red;
-}
-
-.taskList__smallButton--red:hover {
-    background-color: hsl(0, 100%, 65%);
-}
-
-.taskList__smallButton--red:active {
-    background-color: hsl(0, 100%, 70%);
-}
+@import 'boxModel.css';
+@import 'taskListBody.css';
+@import 'section.css';
+@import 'addTaskForm.css';
+@import 'tasks.css';
+@import 'textButtons.css';
